--- a/Pipfile
+++ b/Pipfile
@@ -19,3 +19,4 @@ python_version = "3.11"
 [scripts]
 cli = "python3 cli.py"
 ui = "python3 ui.py"
+build = "pyinstaller --onefile --windowed --add-data \".env:.\" ui.py"
